plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.7'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.netflix.dgs.codegen' version '7.0.3'
}

group = 'com.sun'
version = '0.0.1-SNAPSHOT'
description = 'briareus'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

ext {
    set('netflixDgsVersion', "10.2.1")
}

dependencies {
    implementation project(':briareus-service')
    implementation project(':sun-service')
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.postgresql:postgresql'
    implementation 'com.netflix.graphql.dgs:graphql-dgs-spring-graphql-starter'
    compileOnly 'org.springframework.security:spring-security-core'
    implementation 'io.github.cdimascio:dotenv-java:3.0.0'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'com.netflix.graphql.dgs:graphql-dgs-spring-graphql-starter-test'
    testImplementation 'com.h2database:h2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

dependencyManagement {
    imports {
        mavenBom "com.netflix.graphql.dgs:graphql-dgs-platform-dependencies:${netflixDgsVersion}"
    }
}

generateJava {
    schemaPaths = ["${projectDir}/src/main/resources", "${rootProject.projectDir}/sun-graphql/src/main/resources"]
    packageName = 'com.sun.briareus.codegen'
    generateClient = true
    typeMapping = [
        "Date": "java.time.LocalDateTime"
    ]
}

tasks.named('test') {
    useJUnitPlatform()
}
